--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: master
-media_folder: public/img
+media_folder: public/assets/img
 public_folder: img
 collections:
   - name: "pages"
@@ -9,7 +9,7 @@ collections:
     files:
     - label: "Home"
       name: "home"
-      file: "content/home.md"
+      file: "content/pages/home.md"
       fields:
         - { label: "Title", name: "title", widget: "string"}
         - { label: "Publish Date", name: "date", widget: "datetime" }
