--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -15,9 +15,10 @@ collections:
         - { label: "Publish Date", name: "date", widget: "datetime" }
         - { label: "Hero Title", name: "hero_title", widget: "string" }
         - { label: "Hero Description", name: "hero_description", widget: "text" }
+        - { label: "Hero Image", name: "hero_image", widget: "image" }
         - { label: "Body", name: "body", widget: "markdown"}
-        - { label: 'Cats', 
-            name: "cats", 
+        - { label: 'Content List', 
+            name: "content_list", 
             widget: list, 
             fields: [
               { label: "Name", name: "name", widget: "string"},
