--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: master
 media_folder: public/assets/img
-public_folder: img
+public_folder: assets/img
 collections:
   - name: "pages"
     label: "Pages"
