--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tour.friendstheexperience.com",
+  "name": "next-ts-netlifycms-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
